--- a/index.html
+++ b/index.html
@@ -165,24 +165,27 @@
 		</div>
 
 		<!-- START THE DISCRIPTION CONTENT -->
-		<div class="row pt-2 pb-2 mt-0 mb-3">
 
-			<div class="col-md-6 border-right-relative">
-				<div class="bg-white border-right p-3">
-					<h2 class="fw-bold text-capitalize text-center">Our Services Range From Initial Design To Deployment
-						Anywhere Anytime</h2>
+		<div class=" pt-2 pb-2 mt-0 mb-3">
+			<div class="row" style="--bs-gutter-x: 0rem;">
+				<div class="col-md-6 border-right-relative">
+					<div class="bg-white border-right p-3">
+						<h2 class="fw-bold text-capitalize text-center">Our Services Range From Initial Design To Deployment
+							Anywhere Anytime</h2>
+					</div>
 				</div>
-			</div>
 
-			<div class="col-md-6">
-				<div class="bg-white p-4 text-start">
-					<p class="fw-light">Lorem ipsum dolor sit amet consectetur architecto magni, dicta maxime laborum
-						temporibus dolorem esse doloremque illo quas nisi enim molestias. Tempore ducimus molestiae in
-						dolore enim.</p>
+				<div class="col-md-6">
+					<div class="bg-white p-4 text-start">
+						<p class="fw-light">Lorem ipsum dolor sit amet consectetur architecto magni, dicta maxime laborum
+							temporibus dolorem esse doloremque illo quas nisi enim molestias. Tempore ducimus molestiae in
+							dolore enim.</p>
+					</div>
 				</div>
 			</div>
 		</div>
 		</div>
+
 
 		<!-- START THE CONTENT FOR THE SERVICES -->
 		<div class="container">
